--- a/requirements.txt
+++ b/requirements.txt
@@ -2,25 +2,33 @@ autopep8==1.4.4
 beautifulsoup4==4.6.0
 certifi==2019.9.11
 chardet==3.0.4
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==2.2.7
 django-cogwheels==0.3
 django-debug-toolbar==2.0
 django-modelcluster==4.4
 django-taggit==0.24.0
+django-toolbelt==0.0.1
 django-treebeard==4.3
 djangorestframework==3.10.3
 draftjs-exporter==2.1.7
+gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.8
 Pillow==5.4.1
+psycopg2==2.8.4
 pycodestyle==2.5.0
 pytz==2019.3
 requests==2.22.0
 six==1.13.0
 sqlparse==0.3.0
+static3==0.7.0
 Unidecode==1.1.1
 urllib3==1.25.6
-wagtail==2.5.2
+wagtail==2.5
+wagtail-whoosh==0.2.3
 wagtailmenus==3.0
 webencodings==0.5.1
+Whoosh==2.7.4
 Willow==1.1
