--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,10 @@ draftjs-exporter==2.1.7
 gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.8
+Pillow==5.4.1
 psycopg2==2.8.4
-Pillow==6.2.0
 pycodestyle==2.5.0
+python-dotenv==0.10.3
 pytz==2019.3
 requests==2.22.0
 six==1.13.0
