--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2019.9.11
 chardet==3.0.4
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django==2.2.8
+Django==2.2.7
 django-cogwheels==0.3
 django-debug-toolbar==2.0
 django-modelcluster==4.4
@@ -16,7 +16,7 @@ draftjs-exporter==2.1.7
 gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.8
-Pillow==6.2.0
+Pillow==5.4.1
 psycopg2==2.8.4
 pycodestyle==2.5.0
 python-dotenv==0.10.3
@@ -31,5 +31,6 @@ wagtail==2.5
 wagtail-whoosh==0.2.3
 wagtailmenus==3.0
 webencodings==0.5.1
+whitenoise==5.0.1
 Whoosh==2.7.4
 Willow==1.1
