--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,18 @@ dj-static==0.0.6
 Django==2.2.7
 django-cogwheels==0.3
 django-debug-toolbar==2.0
+django-environ==0.4.5
 django-modelcluster==4.4
 django-taggit==0.24.0
 django-toolbelt==0.0.1
 django-treebeard==4.3
 djangorestframework==3.10.3
 draftjs-exporter==2.1.7
+environs==7.1.0
 gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.8
+marshmallow==3.3.0
 Pillow==5.4.1
 psycopg2==2.8.4
 pycodestyle==2.5.0
@@ -27,7 +30,7 @@ sqlparse==0.3.0
 static3==0.7.0
 Unidecode==1.1.1
 urllib3==1.25.6
-wagtail==2.7
+wagtail==2.5
 wagtail-whoosh==0.2.3
 wagtailmenus==3.0
 webencodings==0.5.1
